--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -15,6 +15,7 @@
       {% endfor %}
     </div>
   <h2 style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;">Sponsorship</h2>
+  {% if site.conference.sponsors %}
     <p>Sponsoring {{ site.title }} {{ site.year }} Event is a great way to communicate your commitment to support the achievement of the sustainable development goals. We thank this year's sponsors:</p> 
   <div class="row">
     <div style ="margin:0 auto">
@@ -22,13 +23,15 @@
       
       <div class="col-sm-6 col-md-3">
 	{% if forloop.first %}    <div class="icon-box" style="position: relative; min-height: 80px;">{% else %}    <div class="icon-box">{% endif %}
-          <img {% if forloop.first %}class="v-align" style=""{% endif %}src="{{ site.baseurl }}/img/{{ sponsor.logo }}">
-        </div>
-      </div>
-	{% endfor %}
+            <img {% if forloop.first %}class="v-align" style=""{% endif %}src="{{ site.baseurl }}/img/{{ sponsor.logo }}">
+          </div>
 	</div>
+	{% endfor %}
+      </div>
     </div>
-
+    {% else %}
+    <p>Sponsoring {{ site.title }} {{ site.year }} Event is a great way to communicate your commitment to support the achievement of the sustainable development goals. If youare interested in sponsoring contact {{ site.email }}.
+    {% endif %}
     
   </div>
 </div>
