Fix collaborator logos

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -5,7 +5,7 @@
     {% else %}
     {% assign organizers = site.school.organizers %}
     {% endif %}
-    {% if organizers %}
+    {% if site.school.organizers %}
     <h2 class="section-title" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;">Collaborators
       <svg class="icon icon-chain"><use xlink:href="#icon-chain"></use></svg>
     </h2>
