--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <!-- Start Header -->
+{% for file in site.pages %}
+{% if file.path == 'video.html' %}
+        {% assign video = true %}
+    {% endif %}
+{% endfor %}
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -16,6 +21,9 @@
         <div class="collapse navbar-collapse scrollspy" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="scroll" href="/">HOME</a></li>
+		{% if video %}
+                <li><a class="scroll" href="./video.html">EVENT VIDEO</a></li>
+		{% endif %}
 		{% if site.school %}
                 <li><a class="scroll" href="#summer_school">SCHOOL</a></li>
 		{% endif %}
@@ -23,7 +31,6 @@
                 <li><a class="scroll" href="#workshop">WORKSHOP</a></li>
 		{% endif %}
                 <li><a class="scroll" href="#sponsors">COLLABORATORS &amp; SPONSORSHIP</a></li>
-                <!-- <li><a class="scroll" href="#testimonials">TRAVEL</a></li> -->
 		{% if site.social.text %}
                 <li><a class="scroll" href="#social_event">SOCIAL EVENT</a></li>
 		{% endif %}
