--- a/_includes/listspeaker.html
+++ b/_includes/listspeaker.html
@@ -1,1 +1,1 @@
-{% if speaker.url %}<a href="{{ speaker.url }}">{% endif %}{{ speaker.name }}{% if speaker.url %}</a>{% endif %}{% endif %}{% if speaker.institute %} - <i>{{ speaker.institute }}</i>{% endif %}
+{% if speaker.url %}<a href="{{ speaker.url }}">{% endif %}{{ speaker.name }}{% if speaker.url %}</a>{% endif %}{% if speaker.institute %} - <i>{{ speaker.institute }}</i>{% endif %}
